# evaluation_tools

./: .gitignore
ipa_map_comparison/: .gitignore  CMakeLists.txt  package.xml
ipa_map_comparison/eval/: test.txt
ipa_map_comparison/include/ipa_map_comparison/: ipa_map_comparison_node.h
ipa_map_comparison/launch/: map_comparison_node.launch  map_saver.launch
ipa_map_comparison/maps/: map_full.pgm  map_full.yaml  map_gaussian_0.5_intern.pgm  map_gaussian_without_ndt_5cm.pgm  map_standard_50cm.pgm  map_standard_5cm.pgm  map_standard_5cm.yaml  map_test.pgm  map_test.yaml
ipa_map_comparison/src/: ipa_map_comparison_node.cpp
ipa_map_comparison/srv/: StartMapEval.srv
loc_evaluation/: CMakeLists.txt  package.xml
loc_evaluation/launch/: measure.launch
loc_evaluation/scripts/: measure_cpu.py
loc_evaluation/scripts/move_robot/: roundcourse.py  simple_run.py
loc_evaluation/scripts/plot/: boxplot.py  plot.py  plot_prob.py  show.py
loc_evaluation/src/: measurenode.cpp  measurenode2.cpp
