<?xml version="1.0"?>
<package format="2">
  <name>ipa_map_comparison</name>
  <version>0.0.0</version>
  <description>The ipa_map_comparison package</description>
  <maintainer email="Philipp.Schnattinger@ipa.fraunhofer.de">srd-ps</maintainer>
  <license>Fraunhofer IPA</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>rostest</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
